# payments-v3-python

./: .gitignore  Dockerfile  pyproject.toml
app/: main.py
app/sdk/: api.py  auth_flow.py  mandate.py  models.py  payment.py
src/: auth.py  main.py
src/sdk/: api.py  mandate.py  models.py
templates/: index.html  mandate.html  payment.html
