[tool.poetry]
name = "payments-v3-python"
version = "0.1.0"
description = "PaymentsV3 SDK"
authors = ["Conrad Ludgate <conrad.ludgate@truelayer.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
oauthlib = "^3.2.0"
truelayer-signing = "^0.2.1"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
types-requests = "^2.28.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
